Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-485

Generated validate methods that reference external thrift files' types are not referenced correctly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.1, 0.2
    • 0.2
    • Ruby - Compiler
    • None
    • Patch Available

    Description

      If you have an enum in one thrift file and a struct with a field of that enum in another thrift file, the generated ruby code will try to validate the field's value against the enum's class, but without the namespace, resulting in errors.

      Also, I found one other place where we should use the fully qualified type name instead of just the type name - when rendering constants of a struct.

      Attachments

        1. thrift-485.patch
          1 kB
          Bryan Duxbury

        Activity

          People

            bryanduxbury Bryan Duxbury
            bryanduxbury Bryan Duxbury
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: