THRIFT-485. rb:  Generated validate methods that reference external thrift files' types are not referenced correctly

This patch fully qualifies type names in two spots.



git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@771964 13f79535-47bb-0310-9956-ffa450edef68